--- a/blog/public/css/style.css
+++ b/blog/public/css/style.css
@@ -51,7 +51,7 @@ h1 {
 p {
     padding: 10px;
     font-weight: 100;
-    color: #fff;
+    color: #478bca;
 }
 .navbar {
     background: #478bca;
