--- a/blog/public/css/pluton.css
+++ b/blog/public/css/pluton.css
@@ -18,33 +18,32 @@
   }
 }
 */
- 
+
  [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "porta";
   font-style: normal;
   font-weight: normal;
   speak: none;
- 
+
   display: inline-block;
   text-decoration: inherit;
-  
   text-align: center;
   /* opacity: .8; */
- 
+
   /* For safety - reset parent styles, that can break glyph codes*/
   font-variant: normal;
   text-transform: none;
-     
+
   /* fix buttons height, for twitter bootstrap */
-  
- 
+
+
   /* you can be more comfortable with increased icons size */
    /*font-size: 120%; */
 
 
- 
+
   /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
+   text-shadow: 1px 1px 1px #0088cc;
 }
 
 .icon-plus:before { content: '\e826'; } /* '' */
