update  create by

--- a/blog/public/fontend/css/style.css
+++ b/blog/public/fontend/css/style.css
@@ -728,6 +728,12 @@ p {
  .footer {
     background: #478bca;
     text-align: center;
+    position:absolute;
+    bottom:1;
+    width:100%;
+    height:40px;/* Height of the footer */
+    padding-top:10px;
+
 }
 .footer > p {
     color: #fff;
