--- a/blog/public/backend/css/bootstrap.css
+++ b/blog/public/backend/css/bootstrap.css
@@ -3177,7 +3177,7 @@ fieldset[disabled] .btn-success.active {
 }
 .btn-info {
   color: #fff;
-  background-color: #5bc0de;
+  background-color: #ff5d65;
   border-color: #46b8da;
 }
 .btn-info:hover,
@@ -3187,7 +3187,7 @@ fieldset[disabled] .btn-success.active {
 .btn-info.active,
 .open > .dropdown-toggle.btn-info {
   color: #fff;
-  background-color: #31b0d5;
+  background-color: #f25229;
   border-color: #269abc;
 }
 .btn-info:active,
