--- a/blog/public/fontend/css/style.css
+++ b/blog/public/fontend/css/style.css
@@ -29,7 +29,7 @@
 **********************************************************************/
  body {
     font-family:'Roboto', sans-serif;
-    color: #FFF;
+    color: #478bca;
     line-height:1.2em;
     font-size:17px;
     line-height:20px;
@@ -51,7 +51,7 @@ h1 {
 p {
     padding: 10px;
     font-weight: 100;
-    color: #ffffff;
+    color: #000000;
 }
 .navbar {
     background: #478bca;
@@ -243,14 +243,14 @@ p {
  .thumbnail {
     width:100%;
     height:100%;
-    padding:0;
+    padding:5;
     overflow: hidden;
     position: relative;
-    border:0;
-    border-radius:0;
-    box-shadow:none;
+    border:10;
+    border-radius:2;
+    box-shadow:5px 5px 2px #888888;
     text-align:center;
-    background: #191a1c;
+    background: #ffffff;
 }
 .thumbnail .more {
     display:block;
@@ -285,7 +285,7 @@ p {
     z-index:4;
 }
 .thumbnail h3 {
-    color: #ffffff;
+    color: #478bca;
     margin-top:10px;
     font-size:20px;
 }
