--- a/blog/public/fontend/css/style.css
+++ b/blog/public/fontend/css/style.css
@@ -840,3 +840,58 @@ p {
     }
 }
 
+#clockdiv{
+    font-family: sans-serif;
+    color: #fff;
+    font-weight: 100;
+    text-align: center;
+    font-size: 30px;
+}
+
+#clockdiv > div{
+    padding: 6px;
+    border-radius: 3px;
+    background: #337ab7;
+    display: inline-block;
+}
+
+#clockdiv div > span{
+    padding: 15px;
+    border-radius: 3px;
+    background: #337ab7;
+    display: inline-block;
+}
+
+.smalltext{
+    padding-top: 5px;
+    font-size: 16px;
+}
+
+
+
+.countdiv{
+    font-family: sans-serif;
+    color: #fff;
+    font-weight: 100;
+    text-align: center;
+    font-size: 35px;
+}
+
+.countdiv > div{
+    padding: 10px;
+    border-radius: 3px;
+    background: #e39334;
+    display: inline-block;
+}
+
+.countdiv div > span{
+    padding: 15px;
+    border-radius: 3px;
+    background: #337ab7;
+    display: inline-block;
+}
+
+.smallnumber{
+    padding-top: 5px;
+    font-size: 16px;
+}
