--- a/blog/public/fontend/css/icon.css
+++ b/blog/public/fontend/css/icon.css
@@ -20,4 +20,8 @@
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+   position:absolute;
+ 
+
+
 }
